Revert ResolvingProject